@@ -13,7 +13,6 @@ dependencies {
   api(libs.jakartaInject)
   api(libs.kotlinXHtml)
   api(libs.moshiCore)
-  api(project(":wisp:wisp-config"))
   api(project(":wisp:wisp-deployment"))
   api(project(":wisp:wisp-resource-loader"))
   api(project(":misk-inject"))
@@ -25,9 +24,9 @@ dependencies {
   implementation(libs.jacksonKotlin)
   implementation(libs.loggingApi)
   implementation(libs.okio)
+  implementation(project(":misk-logging"))
   implementation(project(":misk-tailwind"))
-  implementation(project(":wisp:wisp-logging"))
-  implementation(project(":wisp:wisp-resource-loader-testing"))
+
 
   testImplementation(libs.assertj)
   testImplementation(libs.junitApi)
@@ -35,14 +34,21 @@ dependencies {
   testImplementation(libs.kotlinTest)
   testImplementation(libs.logbackClassic)
   testImplementation(libs.slf4jApi)
+  testImplementation(libs.systemStubsJupiter)
   testImplementation(project(":wisp:wisp-logging-testing"))
   testImplementation(project(":misk"))
   testImplementation(project(":misk-config"))
   testImplementation(project(":misk-testing"))
+  testImplementation(libs.junitPioneer)
 }
 
 mavenPublishing {
   configure(
     KotlinJvm(javadocJar = Dokka("dokkaGfm"))
   )
+}
+// Allows us to set environment variables in tests using JUnit Pioneer
+tasks.test {
+  jvmArgs("--add-opens", "java.base/java.util=ALL-UNNAMED")
+  jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
 }
